<resources>
    <string name="app_name">holovanova-football</string>
    <string name="app_version">1.0</string>
    <string name="compare_fragment">compare</string>
    <string name="favorite_fragment">favorite</string>
    <string name="settings_fragment">settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="streak">streak</string>
    <string name="home">home</string>
    <string name="away">away</string>
    <string name="season_records">season records</string>
    <string name="longest_streak">the longest streak</string>
    <string name="players">players</string>
    <string name="win">win</string>
    <string name="lose">lose</string>
    <string name="goals">goals</string>
    <string name="player_goals">goals: </string>
    <string name="goals_avg">goals avg</string>
    <string name="clean_sheet">clean sheet</string>
    <string name="draw">draw</string>
    <string name="career">career</string>
    <string name="cards">cards</string>
    <string name="yellow_card">yellow</string>
    <string name="red_card">red</string>
    <string name="position_title">position:</string>
    <string name="rating_title">rating:</string>
    <string name="assists_title">assists:</string>
    <string name="transfer_type">type</string>
    <string name="transfer_date">date</string>
    <string name="nationality">nationality: </string>
    <string name="weight">weight: </string>
    <string name="height">height: </string>
    <string name="venue_city">city: </string>
    <string name="venue_address">address: </string>
    <string name="venue_surface">surface: </string>
    <string name="venue_capacity">capacity: </string>
    <string name="compare">compare</string>
    <string name="empty"> </string>
    <string name="battle_click">click to select a team</string>
    <string name="btn_last_ten">last ten</string>
    <string name="btn_this_season">this season</string>
    <string name="btn_last_season">last season</string>
    <string name="search_hint">search</string>
    <string name="vs">vs</string>
    <string name="search_error">No results…</string>
    <string name="search_toolbar">Search a team</string>
    <string name="version">version</string>
</resources>