<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="?attr/bottomSheetStyle"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <ImageView
        android:background="@drawable/top_item"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/venue_photo"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="170dp"
        android:layout_width="170dp"
        app:shapeAppearanceOverlay="@style/ImageView.Round"/>

    <TextView
        android:id="@+id/venue_name"
        style="@style/BigTitleFontStyle"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            style="@style/fontStyleBigSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue_city"/>
        <TextView
            android:id="@+id/city"
            android:layout_marginStart="20dp"
            style="@style/fontStyleSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            style="@style/fontStyleBigSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue_address"/>
        <TextView
            android:id="@+id/address"
            android:layout_marginStart="20dp"
            style="@style/fontStyleSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            style="@style/fontStyleBigSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue_surface"/>
        <TextView
            android:id="@+id/surface"
            android:layout_marginStart="20dp"
            style="@style/fontStyleSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            style="@style/fontStyleBigSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue_capacity"/>
        <TextView
            android:id="@+id/capacity"
            android:layout_marginStart="20dp"
            style="@style/fontStyleSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>