<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PlayerFragment">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleMarginEnd="64dp"
        app:expandedTitleMarginStart="48dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/app_bar"
                app:tint="@color/cyanide" />

            <TextView
                android:id="@+id/title_toolbar"
                style="@style/fontStyleBigSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="15dp" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/blue"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/player_card_shape"
                    android:paddingStart="25dp"
                    android:paddingTop="20dp"
                    app:layout_constraintBottom_toTopOf="@id/second_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/player_firstname"
                        style="@style/BigTitleFontStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/player_lastname"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/player_lastname"
                        style="@style/fontStyleBigSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/player_firstname" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/player_photo"
                        android:layout_width="200dp"
                        android:layout_height="240dp"
                        android:paddingTop="45dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:shapeAppearanceOverlay="@style/ImageView.Corner" />

                    <TextView
                        android:id="@+id/nationality"
                        style="@style/fontStyleBigSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/height"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/height"
                        style="@style/fontStyleBigSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/weight"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/weight"
                        style="@style/fontStyleBigSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/second_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_container">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal"
                        android:paddingStart="25dp"
                        android:weightSum="4">

                        <TextView
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/position_title" />

                        <TextView
                            android:id="@+id/position"
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="start" />

                        <TextView
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/player_goals" />

                        <TextView
                            android:id="@+id/goals"
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="start" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal"
                        android:paddingStart="25dp"
                        android:weightSum="4">

                        <TextView
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/rating_title" />

                        <TextView
                            android:id="@+id/rating"
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="start" />

                        <TextView
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/assists_title" />

                        <TextView
                            android:id="@+id/assists"
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="start" />
                    </LinearLayout>

                    <TextView
                        style="@style/PlayerFontBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/cards" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/yellow_card" />

                        <TextView
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/red_card" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/yellow_card"
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/red_card"
                            style="@style/PlayerFontRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center" />
                    </LinearLayout>

                    <TextView
                        style="@style/PlayerFontBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/career" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/carrer_rv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fadingEdge="horizontal"
                        android:fadingEdgeLength="15dp"
                        android:orientation="horizontal"
                        android:requiresFadingEdge="horizontal"
                        android:scrollbars="horizontal"
                        tools:listitem="@layout/career_rv_item"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/cyanide"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />
    <View
        android:id="@+id/loading_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>